--- a/css/estilos.css
+++ b/css/estilos.css
@@ -33,6 +33,19 @@
     margin-left: 16px;
 }
 
+.bg-header {
+
+    --bs-bg-opacity: 1
+    background-color: rgba(255, 0, 221, 0.733);
+    
+}
+
+.navbar-toggler {
+
+    background-color: white;
+    justify-content: flex-end;
+}
+
 
 .footer {
     background-color: rgba(148, 0, 116, 0.726);
@@ -173,6 +186,7 @@ a {
     font-family: Arial;
     font-style: oblique;
     text-align: center;
+    margin-bottom: 3rem;
     
     
 }
@@ -187,6 +201,13 @@ a {
     grid-area: map;
     width: 50%;
     margin-right: 3rem;
+}
+
+.gmap {
+
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
 }
 
 
@@ -384,9 +405,10 @@ a {
 
     .gmap {
 
-        width: 570px;
+        width: 100%;
         height: 400px;
-        margin-left: 2rem;
+        object-fit: cover;
+
     }
     
 }
@@ -522,9 +544,9 @@ a {
 
     .gmap {
 
-        width: 500px;
-        height: 380px;
-        margin-left: 2rem;
+        width: 100%;
+        height: 400px;
+        object-fit: cover;
     }
     
 }
