--- a/css/estilos.css
+++ b/css/estilos.css
@@ -35,15 +35,18 @@
 
 .bg-header {
 
-    --bs-bg-opacity: 1
-    background-color: rgba(255, 0, 221, 0.733);
-    
+    --bs-bg-opacity: 1  
 }
 
 .navbar-toggler {
 
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.918);
     justify-content: flex-end;
+}
+
+.navbar-toggler-icon {
+
+    background-color: rgba(128, 128, 128, 0.637);
 }
 
 
@@ -56,7 +59,7 @@
 }
 
 .main {
-    margin-top: 150px;
+    margin-top: 120px;
 }
 
 a {
@@ -68,6 +71,7 @@ a {
 .italica {
     font-style: italic;
     font-size: larger;
+    border-color:rgb(255, 0, 221) ;
 }
 
 .textoderecha {
@@ -91,26 +95,17 @@ a {
 }
 
 .seccion1__izq {
-    width: 50%;
     text-align: center;
-    grid-area: secizq;
+    margin-top: 9rem;
+    padding-right: 5rem;
+    
 }
 
 .seccion1__der {
-    width: 50%;
-    justify-items: right;
-    align-items: flex-end;
-    grid-area: secder;
+    padding-left: 0rem;
+    
 }
 
-.seccion__fondo {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: relative;
-    top: 0;
-    left: 0;
-}
 
 .testimonio {
     align-content: center;
@@ -124,11 +119,7 @@ a {
 }
 .seccion2 {
 
-    display: grid;
-    grid-template-areas:
-    "test1 test2 test3";
-    justify-items: center;
-       
+    padding-top: 2rem;       
 }
 
 .testimonio__text {
@@ -136,36 +127,23 @@ a {
 }
 
 .testimonio1 {
-
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: right;
+    
     text-align: center;
-    grid-area: test1;
-    width: 33%;
+    
+    
 }
 
 .testimonio2 {
 
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: center;
     text-align: center;
-    grid-area: test2;
-    width: 33%;
+    padding-left: 3rem;
+    
 }
 
 .testimonio3 {
 
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: center;
     text-align: center;
-    grid-area: test3;
-    width: 33%;
+    padding-left: 4rem;
 }
 
 
@@ -249,8 +227,7 @@ a {
 }
 
 .faqs {
-    display: flex;
-    flex-direction: column;
+    padding-top: 2rem;
 }
 
 
@@ -274,7 +251,9 @@ a {
     flex-direction: row;
     margin-top: 1rem;
 }
-@media screen and (max-width:1023px){
+
+
+/* @media screen and (max-width:1023px){
 
     .footer {
         padding: 1rem 1rem;
@@ -425,7 +404,7 @@ a {
 }
 
     .main {
-        margin-top: 130px;
+        margin-top: 120px;
     }
     
     
@@ -438,13 +417,12 @@ a {
     .seccion1__text {
 
         font-size: medium;
-        text-align: center;
     }
     
     .seccion1__izq {
         width: 100%;
-        text-align: center;
-    
+        
+            
     }
     
     .seccion1__der {
@@ -549,5 +527,5 @@ a {
         object-fit: cover;
     }
     
-}
+} */
 
